# ComfyUI-TRELLIS2

./: .gitignore  README.md  __init__.py  claude.md  comfy-env-root.toml  comfy-env.toml  comfy-test.toml  comfyui_env.toml  comfyui_isolation_reqs.toml  index.html  install.py  install_compilers.py  prestartup_script.py  pyproject.toml  requirements.txt
.github/workflows/: pr-gate.yml  test-install.yml  test-linux-integration.yml
assets/3d/: lowwrap.stl
dev/: index.html
dev/linux-cpu/: index.html  results.json
dev/linux-gpu/: index.html  models.json  results.json
dev/macos-cpu/: index.html  results.json
dev/windows-gpu/: index.html  models.json  results.json
dev/windows-portable-gpu/: index.html  models.json  results.json
installation/: __init__.py  config.py  flash_attn.py  vcredist.py  wheel_install.py
linux-cpu/: index.html  results.json
main/: index.html
main/linux-gpu/: results.json
main/windows-gpu/: results.json
main/windows-portable-gpu/: index.html  results.json
nodes/: __init__.py  comfy-env.toml  folder_paths_fallback.py  helpers.py  nodes_export.py  nodes_inference.py  nodes_loader.py  nodes_native_sampling.py  nodes_unwrap.py  nodes_video.py  stages.py  trellis2_config.py  utils.py
nodes/gpu/: __init__.py  comfy-env.toml  nodes_export.py  nodes_inference.py
nodes/rembg/: BiRefNet.py
nodes/trellis2/: __init__.py  attention_sparse.py  dinov3.py  latent_formats.py  model.py  model_base.py  ops_sparse.py  sparse.py  supported_models.py  vae.py
nodes/trellis_pipelines/: __init__.py  base.py  trellis2_image_to_3d.py
nodes/trellis_utils/: __init__.py  helpers.py  lazy_manager.py  (+2 more)
tests/: __init__.py  smoke_test.py
web/: README.md
workflows/: geometry_only.json  geometry_only_1024.json  geometry_only_1024_cascade.json  geometry_only_1536.json  geometry_only_512.json  geometry_texture.json  mesh_audit.json  refinement.json  remove_background.json  simple.json  standalone_texturing.json  video_to_animation.json
(+118 files in other folders)
