[project]
name = "ComfyUI-TRELLIS2"
description = "ComfyUI nodes for TRELLIS.2 - Microsoft's image-to-3D generation model. Generate high-quality 3D meshes with PBR materials from a single image. Models autodownload from HuggingFace."
version = "0.1.6"
license = "MIT"
dependencies = [
    "comfy-env>0.0.1"
    "huggingface_hub",
    "pillow",
    "numpy",
    "trimesh",
    "imageio",
    "imageio-ffmpeg",
    "easydict",
    "opencv-python-headless",
    "tqdm",
    "transformers>=4.56.0",
    "kornia",
    "timm",
    "lpips",
    "safetensors",
    "einops",
]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-TRELLIS2"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "TRELLIS2"
Icon = ""
