[project]
name = "ComfyUI-TRELLIS2"
description = "ComfyUI nodes for TRELLIS.2 - Microsoft's image-to-3D generation model. Generate high-quality 3D meshes with PBR materials from a single image. Models autodownload from HuggingFace."
version = "0.1.7"
license = "MIT"
dynamic = ["dependencies"]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-TRELLIS2"
#  Used by Comfy Registry https://comfyregistry.org

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "TRELLIS2"
Icon = ""
