[project]
name = "ComfyUI-TRELLIS2"
description = "ComfyUI nodes for TRELLIS.2 - Microsoft's image-to-3D generation model. Generate high-quality 3D meshes with PBR materials from a single image. Models autodownload from HuggingFace."
version = "0.1.7"
license = {file = "LICENSE"}

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "TRELLIS2"
Icon = ""
